<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Ordering System</string>
    <string name="new_order">New Order</string>
    <string name="action">Please choose an action</string>
    <string name="neworder">New Order</string>
    <string name="kind">Please choose a kind</string>
    <string name="title_activity_freddo">Freddo Espresso</string>
    <string name="title_activity_cappucino">Cart</string>
    <string name="quantity">Quantity:</string>
    <string name="sugar">Sugar:</string>
    <string name="milk_ebap">Milk:</string>
    <string name="dose">Dose:</string>
    <string name="nosugar">Sugarfree</string>
    <string name="medium">Medium Sugar</string>
    <string name="sweet">Sweet Sugar</string>
    <string name="flavor">Flavor:</string>
    <string name="cart">Add to Cart</string>
    <string name="verysweet">Very Sweet Sugar</string>
    <string name="with">Sugar Flavor:</string>
    <string name="blacksugar">Brown Sugar</string>
    <string name="zaxarini">Sugarine</string>
    <string name="monos">Single</string>
    <string name="diplos">Double</string>
    <string name="sxolia">Comments:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="title_activity_new_order">New Order</string>
    <string name="current_price">0</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="login_username">Username:</string>
    <string name="login_password">Password:</string>
    <string name="registration">Register</string>
    <string name="login">Login</string>
    <string name="credentials_text">Please provide your credentials to login.</string>
    <string name="title_activity_list_view_model">ListViewModel</string>
    <string name="waiter">Waiter:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="register_now">Register</string>
    <string name="retype_pass">Retype Password:</string>
    <string name="title_activity_tables">Tables</string>
    <string name="title_activity_drinks_fragment">DrinksFragment</string>
    <string name="title_activity_sweets_fragment">SweetsFragment</string>
    <string name="title_activity_snacks_fragment">SnacksFragment</string>
    <string name="small">Small</string>
    <string name="mediumSize">Medium</string>
    <string name="large">Large</string>
    <string name="table_text_intro">Please select a table Number</string>
    <string name="price">Price:</string>
    <string name="product_quantity">Product Quantity:</string>

</resources>
