<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent"
    tools:context="com.example.kostas.functions.CurrentProduct">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:padding="20dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/product_quantity"
                    android:id="@+id/textView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/current_price"
                    style="@android:style/Widget.EditText"
                    android:id="@+id/quantity_value"
                    android:layout_gravity="right"
                    android:gravity="right" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:padding="7dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:textSize="30dp"
                    android:padding="20dp"
                    android:text="@string/minus"
                    android:id="@+id/btnminus" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:textSize="30dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/plus"
                    android:id="@+id/btnplus" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:padding="20dp"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sugar:"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:id="@+id/textView2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:padding="10dp"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nosugar"
                        android:id="@+id/nosugar" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/medium"
                        android:id="@+id/medium" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sweet"
                        android:id="@+id/sweet" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/blacksugar"
                        android:id="@+id/blacksugar" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zaxarini"
                        android:id="@+id/zaxarini" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/verysweet"
                        android:id="@+id/verysweet" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:padding="20dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/dose"
                    android:layout_weight="1"
                    android:id="@+id/textView3" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:padding="10dp"
                android:layout_height="fill_parent">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/small"
                    android:layout_weight="1"
                    android:id="@+id/small" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mediumSize"
                    android:layout_weight="1"
                    android:id="@+id/mediumDose" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/large"
                    android:layout_weight="1"
                    android:id="@+id/large" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:padding="20dp"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/sxolia"
                    android:layout_weight="1"
                    android:id="@+id/textView4" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:padding="10dp"
                android:layout_height="fill_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:hint="Please leave your comments here."
                    android:layout_height="wrap_content"
                    android:id="@+id/coffee_comments" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cart"
                    android:id="@+id/cart" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
