<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFA62F"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.example.kostas.accounts.Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:padding="25dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/credentials_text"
                    android:id="@+id/textView3" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:padding="28dp"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_username"
                    android:layout_weight="1"
                    android:layout_marginRight="15dp"
                    android:id="@+id/textView" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:background="@drawable/rounded_corners"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_username" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:padding="28dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_password"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:id="@+id/textView2" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/rounded_corners"
                    android:inputType="textPassword"
                    android:layout_weight="1"
                    android:ems="10"
                    android:id="@+id/login_password" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:padding="20dp"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registration"
                    android:layout_weight="1"
                    android:layout_marginRight="15dp"
                    android:id="@+id/btnregister" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:id="@+id/btnlogin" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
